# Cliperry

./: .env.example  .env.production.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  errors.py  exceptions.py  logging_config.py  main.py  middleware.py
backend/app/admin/: __init__.py  auth.py  router.py  schemas.py  service.py
backend/app/api/: analyze.py  download.py  files.py  health.py  history.py  router.py  tasks.py  worker.py  ws.py
backend/app/auth/: __init__.py  device.py  rate_limit.py
backend/app/bot/: __init__.py  __main__.py  api_client.py  keyboards.py  main.py  progress.py  store.py  texts.py
backend/app/database/: __init__.py  base.py  check.py  redis.py  session.py  sync_session.py
backend/app/models/: __init__.py  device.py  download.py  settings.py  task.py  user.py
backend/app/parsers/: __init__.py  base.py  exceptions.py  factory.py  instagram.py  registry.py  tiktok.py  twitter.py  youtube.py  youtube_formats.py  ytdlp.py
backend/scripts/: celery-health.sh  entrypoint-bot.sh  entrypoint-worker.sh  entrypoint.sh  run-tests.sh
backend/tests/: README.md  conftest.py  test_admin_auth.py  test_analyze_api.py  test_bot.py  test_bot_progress.py  test_celery_task.py  test_download_api.py  test_health.py  test_history_api.py  test_parser_factory.py  test_security.py  test_url_validator.py  test_youtube_parser.py
(+81 files in other folders)
